[package]
name = "bing-search"
version = "1.0.0"
edition = "2021"
licence = "MIT"
description = "Bing search engine in your terminal"
homepage = "https://github.com/phoenix-journey/bing-search"
documentation = "https://docs.rs/bing-search"
repository = "https://github.com/phoenix-journey/bing-search"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soup = "0.5.1"
reqwest = { version = "0.11" }
tokio = { version = "1", features = ["full"] }